2.AKS/kubeapps/kubeapps-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: kubeapps
    meta.helm.sh/release-namespace: kubeapps
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: kubeapps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeapps
    helm.sh/chart: kubeapps-7.7.4
  name: kubeapps-ing
  namespace: kubeapps
spec:
  rules:
  - host: kubeapps.nodespringboot.org
    http:
      paths:
      - path: /kubeapps(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: kubeapps 
            port:
              number: 80               # 포트를 맞춤 (이름 혹은 숫자)
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: kubeapps 
            port:
              number: 80
